primitives/tests/ui_fail/no_conversion.stderr
error[E0308]: mismatched types
 --> tests/ui_fail/no_conversion.rs:4:17
  |
4 |     Fixed::from(-1_f64);
  |     ----------- ^^^^^^ expected struct `Fixed`, found `f64`
  |     |
  |     arguments to this function are incorrect
  |
note: associated function defined here
