primitives/tests/ui_fail/no_conversion.rs
use iroha_primitives::fixed::Fixed;

fn main() {
    Fixed::from(-1_f64);
}
